Apply patch by Matthieu Pupat. We strictly need the drive device only to find out if it is removable/hotpluggable, and I see the point that logical volumes may not have a clear parent.

BUG: 273369